--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -80,24 +80,25 @@ UE4 swoją popularność zawdzięcza między innymi otwartemu źródłu, co w pe
 %\url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/index.html}
 %\newline\url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/QuickReference/index.html}
 %\newline obowiazkowo obrazek z dolu strony :D
-Styl rozgrywki zależy od gry i wizji jej autora, jednak istnieją pewne cechy wspólne widoczne w niemal każdym tytule. Jest to na przykład sterowanie za pomocą urządzeń wejścia czy pewien zbiór zasad gry. Z tego powodu w UE4 przyjęto zaprezentowaną poniżej konwencję dotyczącą rozgrywki (rys. \ref{fig-gameplay-chart}).\cite{docs-gameplay-framework}
+Styl rozgrywki zależy od gry i wizji jej autora, jednak istnieją pewne cechy wspólne widoczne w niemal każdym tytule. Jest to na przykład sterowanie za pomocą urządzeń wejścia czy pewien zbiór zasad gry. Z tego powodu w UE4 przyjęto zaprezentowaną poniżej konwencję dotyczącą rozgrywki (rys. \ref{fig-gameplay-chart})\cite{docs-gameplay-framework}.
 \begin{description}
-\item[Actor:]Jest to bazowa klasa dla każego obiektu, który można umieścić w scenie. Obiekty te nie muszą mieć fizycznej reprezentacji. Często zawierają dodatkowe komponenty ~({\em ActorComponents}) określające między innymi w jaki sposób obiekt się porusza czy jak jest renderowany. Oprócz tego {\em aktor} posiada obsługę replikacji właściwości i wywołań funkcji przez sieć.
-\item[Pawn:]Jest to {\em aktor}, który może być kontrolowany przez gracza lub komputer. Stanowi ich fizyczną reprezentację w grach, które tego wymagają.
+\item[Level:] W terminologii UE4 {\em level} jest zbiorem wszystkich obiektów, które gracz widzi lub może wejść z nimi w interakcje. Stanowi on reprezentację obszaru, w którym toczy się gra.
+\item[Actor:]Jest to bazowa klasa dla każego obiektu, który można umieścić w {\em levelu}. Obiekty te nie muszą mieć fizycznej reprezentacji. Często zawierają dodatkowe komponenty ~({\em ActorComponents}) określające na przykład sposób porusza się obiektu. Oprócz tego {\em actor} posiada obsługę replikacji właściwości i wywołań funkcji przez sieć.
+\item[Pawn:]Jest to {\em actor}, który może być kontrolowany przez gracza lub komputer. Stanowi ich fizyczną reprezentację w grach, które tego wymagają.
 \item[Character:]Jest to humanoidalny {\em pawn} rozszerzony o następujące komponenty:
 	\begin{description}
-	\item[SkeletalMeshComponent] wykorzystywany przy animacjach szkieletowych,
+	\item[SkeletalMeshComponent] definiujący geometrię postaci w przypadku animacji szkieletowych,
 	\item[CapsuleComponent] wykorzystywany przy kolizjach z innymi obiektami,
 	\item[CharacterMovementComponent] opisujący ludzkie ruchy takie jak chodzenie, bieganie czy pływanie oraz właściwości związane z ruchem na przykład prędkość chodzenia czy wpływ grawitacji.
 	\end{description}
 \item[Controller:] jest to {\em aktor}, który po przejęciu {\em pawna} sprawuje nad nim kontrolę. Wyróżniamy dwa rodzaje: {\em PlayerController}, który stanowi interfejs między grającym, a sterowaną przez niego postacią (reprezentuje wolę gracza) oraz {\em AIController}, który decyduje o zachowaniach postaci na podstawie zaprogramowanych wcześniej drzew behawioralnych.
 \newline {\em PlayerController} danego gracza w przypadku rozgrywki sieciowej występuje w dwóch instancjach: po jednej na serwerze oraz urządzeniu grającego, co należy brać pod uwagę podczas programowania tego elementu.
-\item[HUD ({\em ang. head-up display}):] podręczne informacje dla gracza na przykład jego obecny wynik, stan zdrowia sterowanej przez niego postaci czy tak zwana minimapa.
-\item[Camera:] decyduje o perspektywie, z której grający obserwuje scenę.\newline Jest elementem PlayerControllera.
-\item[GameMode:] zawiera informacje takie jak zasady gry czy warunki zwycięstwa. Nie powinien zawierać żadnych informacji potrzebnych klientom, ponieważ istnieje jedynie na serwerze. Decyduje również o tym, który {\em GameState} i {\em PlayerState} zostanie wykorzystany. Wybór {\em GameMode-a} zależy od wczytywanego poziomu.
+\item[HUD ({\em ang. head-up display}):] podręczne informacje wyświetlane na ekranie gracza na przykład jego obecny wynik, stany zdrowia widocznych postaci czy tak zwana minimapa.
+\item[Camera:] decyduje o perspektywie, z której grający obserwuje {\em level}.
+\item[GameMode:] zawiera informacje takie jak zasady gry czy warunki zwycięstwa. Nie powinien zawierać żadnych informacji potrzebnych klientom, ponieważ istnieje jedynie na serwerze. Decyduje również o tym, który {\em GameState} i {\em PlayerState} zostanie wykorzystany. Wybór {\em GameMode-a} zależy od wczytywanego {\em levelu}.
 \item[GameState:] zawiera informacje o obecnym stanie rozgrywki na przykład czy mecz już się rozpoczął, wykonane misje, wyniki, listę graczy. {\em GameState} istnieje zarówno na serwerze jak i u klientów oraz jest replikowalny.
 \item[PlayerState:] zawiera informacje o uczestniku rozgrywki na przykład jego imię, wynik czy zespół, do którego należy. Zarówno serwer jak i wszyscy klienci posiadają kopie {\em PlayerState-ów} dotyczących każdego grającego (co nie ma miejsca w przypadku {\em PlayerControllerów} -- każdy klient wie jedynie o swoim {\em PlayerControllerze}).
-\item[GameInstance:] zawiera informacje o danej instancji gry. Istnieje jeden obiekt tej klasy na każdą uruchomioną grę i pozostaje on do dyspozycji aż do jej wyłączenia. Wczytywanie poziomów nie ma wpływu na {\em GameInstance}, dzięki czemu klasa ta umożliwia przenoszenie informacji między poziomami.
+\item[GameInstance:] zawiera informacje o danej instancji gry. Istnieje jeden obiekt tej klasy na każdą uruchomioną grę i pozostaje on do dyspozycji aż do jej wyłączenia. Wczytywanie {\em leveli} nie ma wpływu na {\em GameInstance}, dzięki czemu klasa ta umożliwia przenoszenie informacji między {\em levelami}.
 \end{description}
 %dopisac cos ze trzymalismy sie tej konwencji i dalej prezentujemy jej wykorzystanie
 Stosowanie się do tej konwencji zaprezentowano w rozdziale \ref{implementacja} skupiającym się na implementacji gry ,,thesis\_1``.
@@ -110,15 +111,27 @@ Stosowanie się do tej konwencji zaprezentowano w rozdziale \ref{implementacja} 
 \end{figure}
 
 \chapter{Przykładowy przebieg rozgrywki} %zeby opisac JAK zaimplementowalismy, trzeba najpierw opisac CO zaimplementowalismy
+
 \begin{enumerate}
-	\item Gracz 1 uruchamia grę po raz pierwszy, wobec czego jest przenoszony do menu opcji w celu wybrania ustawień. Wpisuje swoje imię w odpowiednim polu, wybiera klasę postaci, zdolności, obrazek oraz czy będzie korzystał z klawiatury i myszki czy z kontrolera do gier (pada). Klika przycisk {\em Accept}, w katalogu gry powstaje plik z zapisem ustawień, gracz przenoszony jest do menu głównego.
-	\item Gracz 2 uruchamiał już grę wcześniej, wobec czego posiada plik z zapisem. Po uruchomieniu przenoszony jest prosto do menu głównego.
-	\item Gracz 1 w menu głównym klika przycisk {\em Host game}, a następnie ustala nazwę serwera, maksymalną liczbę graczy i metodę połączenia (Internet lub LAN). Aplikacja tego gracza będzie jednocześnie serwerem i klientem. Gracz zatwierdza przyciskiem {\em Accept}, po czym wczytuje mu się poziom, otrzymuje kontrolę nad swoją postacią, a serwer jest gotowy do przyjmowania klientów.
-	\item Aplikacja Gracza 2 będzie klientem. W menu głównym gracz klika przycisk {\em Find game}, a następnie podaje adres IP Gracza 1 i zatwierdza przyciskiem {\em Connect}. Po chwili łączy się z serwerem i otrzymuje kontrolę nad swoją postacią.
-	\item Obaj gracze prowadzą rozgrywkę, mogą chodzić, skakać, unikać oraz używać wybranych wcześniej zdolności. Sterowanie zależy od ustawień (mysz i klawiatura lub pad). Atakowanie postaci przeciwnika odbiera jej punkty zdrowia. Po utraceniu wszystkich punktów zdrowia dany gracz zostaje wyłączony z rozgrywki na siedem sekund, a wynik jego rywala jest zwiększany o jeden punkt. Obaj gracze widzą na swoich ekranach tablicę wyników aktualizowaną na bieżąco. Po upływie 7 sekund czasu gracz z powrotem otrzymuje kontrolę nad swoją postacią i gra jest kontynuowana.
+	\item Gracz pierwszy uruchamia grę po raz pierwszy, wobec czego jest przenoszony do menu opcji w celu wybrania ustawień (rys. \ref{settingsmenu}). Wpisuje swoje imię w odpowiednim polu, wybiera klasę postaci, zdolności, obrazek oraz czy będzie korzystał z klawiatury i myszki czy z kontrolera do gier (pada). Klika przycisk {\em Accept}, w katalogu gry powstaje plik z zapisem ustawień, gracz przenoszony jest do menu głównego.
+	\item Gracz drugi uruchamiał już grę wcześniej, wobec czego posiada plik z zapisem. Po uruchomieniu przenoszony jest do menu głównego.
+\item Gracz pierwszy w menu głównym klika przycisk {\em Host game}, a następnie ustala nazwę serwera, maksymalną liczbę graczy i metodę połączenia (Internet lub LAN). Aplikacja tego gracza będzie jednocześnie serwerem i klientem. Gracz zatwierdza przyciskiem {\em Accept}, po czym wczytuje mu się poziom, otrzymuje kontrolę nad swoją postacią, a serwer jest gotowy do przyjmowania klientów.
+	\item Aplikacja Gracza drugi będzie klientem. W menu głównym gracz klika przycisk {\em Find game}, a następnie podaje adres IP Gracza pierwszego i zatwierdza przyciskiem {\em Connect}. Po chwili łączy się z serwerem i otrzymuje kontrolę nad swoją postacią.
+	\item Obaj gracze prowadzą rozgrywkę(rys. \ref{gameplay1}), mogą chodzić, skakać, unikać oraz używać wybranych wcześniej zdolności. Sterowanie zależy od ustawień (mysz i klawiatura lub pad). Atakowanie postaci przeciwnika odbiera jej punkty zdrowia. Po utraceniu wszystkich punktów zdrowia dany gracz zostaje wyłączony z rozgrywki na siedem sekund, a wynik jego rywala jest zwiększany o jeden punkt. Obaj gracze widzą na swoich ekranach tablicę wyników aktualizowaną na bieżąco. Po upływie 7 sekund czasu gracz z powrotem otrzymuje kontrolę nad swoją postacią i gra jest kontynuowana.
 	\item Gracze kończą rozgrywkę przyciskiem {\em X} w prawym górnym rogu okna. Gracz o najwyższym wyniku zostaje zwycięzcą.
 \end{enumerate}
-
+\begin{figure}
+	\centering
+		\includegraphics[width=1\textwidth]{figures/settingsmenu.jpg}
+	\caption{Menu opcji}
+	\label{settingsmenu}
+\end{figure}
+\begin{figure}
+	\centering
+		\includegraphics[width=1\textwidth]{figures/gameplay1.jpg}
+	\caption{Rozgrywka}
+	\label{gameplay1}
+\end{figure}
 \chapter{Opis implementacji gry ,,thesis\_1``}
 \label{implementacja}
 
@@ -154,23 +167,29 @@ Wywołanie pliku wykonywalnego z grą ({\em thesis\_1.exe}) powoduje uruchomieni
 \section{System zapisu stanu gry}
 	\label{sejwy}
 	W grze ,,thesis\_1`` zaimplementowano system zapisu gry, który umożliwia grającemu zachowanie swoich ustawień do kolejnego uruchomienia lub przeniesienia ich na inny komputer. System ten korzysta z klasy {\em PlayerSaveGame}, funkcji {\em SaveGameToSlot} i {\em LoadGameFromSlot} oraz struktury {\em PlayerInfo}. Obiekty klasy {\em PlayerSaveGame} są serializowane i deserializowane z pliku "thesis\_1/Saved/SaveGames/PlayerSettingsSave.sav" oraz posiadają w sobie strukturę {\em PlayerInfo}, w której przechowywane są ustawienia grającego: imię, obrazek, klasa postaci, rodzaj sterowania oraz zdolności.
-	\newline Po uruchomieniu gry wywoływana jest funkcja {\em SaveGameCheck} z klasy {\em GameInfoInstance}, która jest odpowiedzialna za sprawdzenie, czy istnieje plik \newline "thesis\_1/Saved/SaveGames/PlayerSettingsSave.sav". Jeżeli nie istnieje, grający przenoszony jest do menu opcji, w którym wybiera ustawienia i powoduje stworzenie pliku z zapisem. Jeżeli plik ten istnieje, grający przenoszony jest do menu głównego, a dane z pliku wczytywane są przy wejściu do menu opcji (w celu wyświetlenia zapisanych ustawień) lub dołączeniu do rozgrywki (w celu utworzenia postaci oraz zdolności zgodnych z wyborami grającego). 
-\clearpage
+	\newline Po uruchomieniu gry wywoływana jest funkcja {\em SaveGameCheck} z klasy {\em GameInfoInstance}, która jest odpowiedzialna za sprawdzenie, czy istnieje plik \newline "thesis\_1/Saved/SaveGames/PlayerSettingsSave.sav". Jeżeli nie istnieje, grający przenoszony jest do menu opcji, w którym wybiera ustawienia i powoduje stworzenie pliku z zapisem. Jeżeli plik ten istnieje, grający przenoszony jest do menu głównego, a dane z pliku wczytywane są przy wejściu do menu opcji (w celu wyświetlenia zapisanych ustawień) lub dołączeniu do rozgrywki (w celu utworzenia postaci oraz zdolności wybranych przez grającego). 
 \section{Postacie i zdolności}
 	\label{characters-skills}
 Gra składa się wielu nieodzownych elementów, jednym z istotniejszych jest niewątpliwie postać którą gracz kontroluje.
 	\subsection{Pawn a PlayerController}
 	Podczas tworzenia postaci pojawia się wiele pytań i problemów do rozwiązania.
-Jednym z nich jest sposób zbierania danych od gracza w sposób pozwalający na ponowne wykorzystanie kodu w postaciach o podobnych cechach. UE4 pozwala na obsługę danych wejściowych w klasach Pawn lub w PlayerController. Rzeczą wartą rozważenia jest sposób w jaki rozdzielimy obsługę wejścia pomiędzy tymi klasami\cite{docs-playercontroller}. W prostych przypadkach możliwa jest obsługa zebranych informacji o woli gracza całkowicie w klasie Pawn. Jednak gdy obsługa sterowania jest skomplikowana implementacja PlayerController’a staje się nieunikniona. PlayerController pozwala na przykład na sterowanie wieloma awatarami na jednej maszynie czy dynamiczne przełączanie się pomiędzy postaciami.  Kolejną zaletą PlayerController’a jest to, że jedna jego instancja jest przypisana do gracza przez całą rozgrywkę a kontrolowane przez niego obiekty klasy Pawn mogą się zmieniać. Przykładowo podczas odradzania naszej postaci utworzony zostaje nowy obiekt klasy Pawn a kontroler pozostaje ten sam, więc dane których nie chcemy stracić takie jak zdobyte punkty czy złoto powinny być składową PlayerController'a.
-	W projekcie jako klasy bazowej do wirtualnej reprezentacji gracza użyto klasy Character, a dane wejściowe są całkowicie obsługiwane przez PlayerController
-	\subsection{Dygresja na temat nazewnictwa klas}
-	Utworzone klasy pochodne posiadają mylący przedrostek Base. Jest to spowodowane faktem, że klasy napisane w C++ są następnie wykorzystywane jako klasy bazowe blueprint'ów postaci. Wszystkie podstawowe umiejętności jak poruszanie, skakanie czy obracanie się postaci zostały zaimplementowane za pomocą języka C++, które później zostały odziedziczone w blueprint'ach. Zyskano przez to warstwę abstrakcji oddzielającą niezbędne linie kodu od dodatkowych zdolności postaci, oraz łatwość zmian indywidualnych cech postaci za pomocą edytora blueprint'ów.
+Jednym z nich jest sposób zbierania danych od gracza. UE4 pozwala na obsługę danych wejściowych w klasach {\em Pawn} lub w {\em PlayerController}. Rzeczą wartą rozważenia jest sposób w jaki rozdzielimy obsługę wejścia pomiędzy tymi klasami\cite{docs-playercontroller}. W prostych przypadkach możliwa jest obsługa zebranych informacji o woli gracza całkowicie w klasie  {\em Pawn}. Jednak gdy sterowanie staje się skomplikowane, jego obsługa w {\em PlayerControllerze} jest nieunikniona.  {\em PlayerController} pozwala na przykład na sterowanie wieloma  {\em pawnami} na jednej maszynie czy dynamiczne przełączanie się pomiędzy postaciami.  Kolejną zaletą  {\em PlayerControllera} jest to, że jedna jego instancja jest przypisana do gracza przez całą rozgrywkę, a kontrolowane przez niego obiekty klasy  {\em Pawn} mogą się zmieniać. Na przykład podczas odradzania naszej postaci utworzony zostaje nowy obiekt klasy  {\em Pawn}, a kontroler pozostaje ten sam, więc dane, których nie chcemy stracić, takie jak zdobyte punkty czy złoto powinny być składową  {\em PlayerControllera}.
+\newline \indent W grze ,,thesis\_1`` jako klasy bazowej do reprezentacji gracza użyto klasy  {\em Character}, a dane wejściowe są całkowicie obsługiwane przez  {\em PlayerController}.
+	\subsection{Nazewnicto klas}
+	Utworzone klasy pochodne posiadają przedrostek  {\em Base}. Jest to spowodowane faktem, iż klasy napisane w  {\em C++} są następnie wykorzystywane jako klasy bazowe blueprintów postaci. Wszystkie podstawowe umiejętności jak poruszanie się, skakanie czy obracanie się postaci zostały zaimplementowane za pomocą języka  {\em C++},a następnie odziedziczone w blueprintach. Zyskano dzięki temu warstwę abstrakcji oddzielającą niezbędne linie kodu od dodatkowych zdolności postaci oraz łatwość zmian indywidualnych cech postaci za pomocą edytora blueprintów.
 	\subsection{BaseCharacter}
-	Na potrzeby projektu, w celu rozwinięcia podstawowych możliwości klasy Character udostępnionej przez silnik stworzono pochodną klasę BaseCharacter. Głównym celem było pozwolenie graczom na dowolne dostosowanie zdolności awatara. Problem ten został rozwiązany za pomocą tablicy obiektów USkill które posiadają metody OnPress oraz OnRelease zawierające logikę, która wykonywana jest gdy gracz naciska lub zwalnia odpowiedni przycisk.		
-	Dodane zostały również zmienne których silnik używa do odgrywania odpowiednich animacji takich jak animacja uniku czy animacja czarowania oraz funkcje które zmieniają wartości tych zmiennych na serwerze gdy gracz na maszynie klienckiej wciśnie odpowiednie przyciski.
-	\subsection{BasePlayerController}
-	Klasa BasePlayerController jest stworzonym na potrzeby projektu rozszerzeniem klasy PlayerController. Jest ona odpowiedzialna za obsługę danych wejściowych zebranych od gracza. 
-Gracz ma do wyboru dwa sposoby kontrolowania swojej postaci. W zależności od ustawień w odpowiednim oknie interfejsu użytkownika gracz może korzystać z klawiatury oraz myszy lub z kontrolera gier. Przy wyborze klawiatury i myszy postać można poruszać za pomocą klawiszy W, A, S oraz D a postać obrócona jest zawsze w kierunku kursora myszy.  Przy wyborze kontrolera gier kierunek, w który postać spogląda oraz porusza się jest wyznaczany na podstawie wychyleń odpowiednio, prawego oraz lewego drążka kontrolera. W obu przypadkach wciśniecie klawisza odpowiadającego za skok lub unik wywołuje odpowiednie metody które odpowiedzialne są za ruch naszego awatara oraz odegranie animacji. Wciśnięcie klawiszy odpowiadających za wykonanie zdolności działa 2 etapowo. Podczas wciśnięcia klawisza odgrywana jest animacja oraz wykonywany jest kod metody OnPress z klasy USkill, który może wykonać całą logikę zdolności lub przygotować naszą postać do momentu gdy gracz zwolni przycisk. Następnie wykona się metoda OnRelease, która może pozostać pusta, dokończyć wykonanie zdolności lub przywrócić gracza do stanu sprzed kliknięcia przycisku.
+	W celu rozwinięcia podstawowych możliwości klasy  {\em Character} udostępnionej przez silnik stworzono pochodną klasę  {\em BaseCharacter}. Głównym celem było pozwolenie graczom na dowolne dostosowanie zdolności postaci. Problem ten został rozwiązany za pomocą tablicy obiektów  {\em USkill}, które posiadają metody  {\em OnPress} oraz  {\em OnRelease} zawierające logikę, która wykonywana jest, gdy gracz naciska lub zwalnia odpowiedni przycisk.		
+Dodane zostały również zmienne, które są używne przez silnik do odgrywania odpowiednich animacji takich jak animacja uniku czy animacja czarowania oraz funkcje, które zmieniają wartości tych zmiennych na serwerze, gdy gracz na maszynie klienckiej wciśnie odpowiednie przyciski.
+	\subsection{BasePlayerController i sterowanie }
+	Klasa  {\em BasePlayerController} jest stworzonym na potrzeby projektu rozszerzeniem klasy  {\em PlayerController}. Jest ona odpowiedzialna między innymi za obsługę danych wejściowych zebranych od gracza. 
+Gracz ma do wyboru dwa sposoby kontrolowania swojej postaci. W zależności od ustawień w odpowiednim oknie interfejsu użytkownika gracz może korzystać z klawiatury oraz myszy lub z kontrolera gier. Sterowanie odbywa się za pomocą:
+\begin{description}
+\item[Klawiatury i myszy]
+Postać można poruszać za pomocą klawiszy W, A, S oraz D i obrócona jest zawsze w kierunku kursora myszy. Klawisz F odpowiada za unik, a {\em spacja} za skok. Zdolności uruchamiane są przyciskami 1, 2, 3 i 4.
+\item[Kontrolera Xbox One]
+Drążki kontrolera odpowiadają za ruch i kierunek postaci. Klawisz A odpowiada za unik, a B za skok. Zdolności uruchamiane są przyciskami LT, LB, RT i RB.
+\end{description}
+Uruchamianie zdolności działa dwuetapowo. Podczas wciśnięcia klawisza odgrywana jest animacja oraz wykonywany jest kod metody {\em OnPress} z klasy {\em USkill}, który może wykonać całą logikę zdolności lub przygotować naszą postać do momentu gdy gracz zwolni przycisk. Następnie wykona się metoda {\em OnRelease}, która może pozostać pusta, dokończyć wykonanie zdolności lub przywrócić gracza do stanu sprzed kliknięcia przycisku.
 	\subsection{BaseCharacterMovementComponent}
 	CharacterMovementComponent jest składową klasy Character odpowiedzialnej za przemieszczanie się awatara która automatycznie obsługuje networking.  System predykcji, replikacji i korekcji w sieciowych grach korzystających z CharacterMovementComponent działa w następujący sposób \cite{docs-charactermovementcomponent}. Co klatkę wywoływana jest metoda TickComponent gdzie obliczane są zmiany przyspieszenia oraz rotacji postaci. Następnie  w zależności od tego czy Character jest kontrolowany lokalnie czy sieciowo wywoływana jest metoda PerformMovement lub ReplicateMoveToServer. Metoda ReplicateMoveToServer dodaje ruch do listy oczekujących ruchów, następnie wywołuje lokalnie metodę PerformMovement i replikuje ruch na serwer poprzez zdalne wywołanie metody ServerMove. ServerMove przesuwa postać na serwerze na odpowiednie miejsce a następnie oblicza dystans pomiędzy pozycją postaci na serwerze i na maszynie klienckiej. Jeżeli dystans jest większy niż dopuszczalny, serwer  zdalnie wywołuje procedurę ClientAdjustPosition na kliencie, która przesuwa postać w odpowiednie miejsce. Jeżeli dane korekcyjne dotrą do klienta a jego pozycja zostanie poprawiona metoda ClientAdjustPosition wykona ponownie wszystkie ruchy, które zostały dodane na listę ruchów oczekujących po ruchu który został poprawiony przez serwer.
 	CharacterMovementComponent posiada system symulacji i wygładzania. Dane o aktorze takie jak jego pozycja, prędkość czy rotacja są replikowane na inne maszyny za pomocą standardowego mechanizmu replikacji. Oznacza to, że maszyny nie dostają potrzebnych im informacji co klatkę. Wymusza to potrzebę symulacji zmian w położeniu postaci pomiędzy kolejnymi pakietami danych. Symulacja polega na przesuwaniu obiektu klasy Character zgodnie z ostatnio otrzymanymi danymi na temat jego ruchu. Gdy symulacja odbiega od rzeczywistych zmian, które zaszły na innych maszynach, UE4 wygładza zmianę pozycji w celu uniknięcia nagłego widocznego skoku pozycji awatara.
